--- CHANGES SINCE UASNIFFER 0.2 ----------------------------------------------

* Added support for RockMelt browser.
* Added support for Chrome OS.
* Added tests for several newer Chrome agent strings.
* Added test for Firefox 4.0.1 on Mac OS X.