@@ -364,6 +364,19 @@ BrowserOS-MacOS-10
 BrowserOS-MacOS-10-5
 BrowserOS-MacOS-10-5-7
 
+# iCab 4.7
+iCab/4.7 (Macintosh; U; Intel Mac OS X)
+Device-Desktop
+Device-NoPhone
+Browser-iCab
+Browser-iCab-4
+Browser-iCab-4-7
+Browser-iCab-4-7-0
+BrowserEngine-WebKit
+BrowserOS-NIX
+BrowserOS-MacOS
+BrowserOS-MacOS-10
+
 
 #-----------------------------------------------------------------------------
 # Google Chrome
@@ -2815,6 +2828,7 @@ Browser-Flock
 Browser-Flock-1
 Browser-Flock-1-2
 Browser-Flock-1-2-7
+Browser-Flock-1-2-7-0
 BrowserEngine-Gecko
 BrowserEngine-Gecko-1
 BrowserEngine-Gecko-1-8
@@ -2836,6 +2850,7 @@ Browser-Flock
 Browser-Flock-2
 Browser-Flock-2-0
 Browser-Flock-2-0-0
+Browser-Flock-2-0-0-0
 BrowserEngine-Gecko
 BrowserEngine-Gecko-1
 BrowserEngine-Gecko-1-9
@@ -2857,6 +2872,7 @@ Browser-Flock
 Browser-Flock-2
 Browser-Flock-2-0
 Browser-Flock-2-0-3
+Browser-Flock-2-0-3-0
 BrowserEngine-Gecko
 BrowserEngine-Gecko-1
 BrowserEngine-Gecko-1-9
@@ -2866,6 +2882,50 @@ BrowserOS-NIX
 BrowserOS-MacOS
 BrowserOS-MacOS-10
 BrowserOS-MacOS-10-4
+BrowserLocale-en
+BrowserLocale-en-US
+
+# Flock 3.5 on Mac OS X
+Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10_6_6; en-US) AppleWebKit/534.7 (KHTML, like Gecko) Flock/3.5.3.4628 Chrome/7.0.517.450 Safari/534.7
+Device-Desktop
+Device-NoPhone
+Browser-Flock
+Browser-Flock-3
+Browser-Flock-3-5
+Browser-Flock-3-5-3
+Browser-Flock-3-5-3-4628
+BrowserEngine-WebKit
+BrowserEngine-WebKit-534
+BrowserEngine-WebKit-534-7
+BrowserEngine-WebKit-534-7-0
+BrowserEngine-WebKit-534-7-0-0
+BrowserOS-NIX
+BrowserOS-MacOS
+BrowserOS-MacOS-10
+BrowserOS-MacOS-10-6
+BrowserOS-MacOS-10-6-6
+BrowserLocale-en
+BrowserLocale-en-US
+
+# Flock 3.5 on Windows 7
+Mozilla/5.0 (Windows; U; Windows NT 6.1; en-US) AppleWebKit/534.7 (KHTML, like Gecko) Flock/3.5.2.4599 Chrome/7.0.517.442 Safari/534.7
+Device-Desktop
+Device-NoPhone
+Browser-Flock
+Browser-Flock-3
+Browser-Flock-3-5
+Browser-Flock-3-5-2
+Browser-Flock-3-5-2-4599
+BrowserEngine-WebKit
+BrowserEngine-WebKit-534
+BrowserEngine-WebKit-534-7
+BrowserEngine-WebKit-534-7-0
+BrowserEngine-WebKit-534-7-0-0
+BrowserOS-Windows
+BrowserOS-Windows-NT
+BrowserOS-Windows-NT-6
+BrowserOS-Windows-NT-6-1
+BrowserOS-Windows-7
 BrowserLocale-en
 BrowserLocale-en-US
 
